Fix column after add multiple choose was too small

--- a/assets/opstools/BuildApp/BuildApp.css
+++ b/assets/opstools/BuildApp/BuildApp.css
@@ -125,5 +125,5 @@ div[view_id='ab-new-connectObject-list-item'] div.webix_list_item:hover {
 }
 .ab-main-container .selectivity-multiple-selected-item {
 	background: #3498db !important;
-	max-width: 100px !important;
+	/*max-width: 100px !important;*/
 }
